crates/stc_ts_file_analyzer/tests/pass/exprs/object/key/11.ts
// @target: es5
var s: string;
var n: number;
var a: any;
var v = {
    get [`hello ${a} bye`]() { return 0; }
}